# ECS277

./: .gitignore  .gitmodules  README.md
Projects/final_project/code/: CMakeLists.txt
Projects/final_project/code/openvdb_ao/: openvdb_ao.cc
Projects/final_project/code/openvdb_ao/viewer/: RenderModules.cc  RenderModules.h  Viewer.cc
Projects/final_project/code/openvdb_tutorial/: openvdb_tutorial.cc
Projects/final_project/proposal/: mybib.bib  prop.tex
Projects/final_project/report/: mybib.bib  report.tex
Projects/project1/: .gitignore  CMakeLists.txt
Projects/project1/data/head/: Head.info.txt
Projects/project1/data/set1/: link.txt  set1.pgm.info.txt
Projects/project1/data/stent/: stent16.info.txt
Projects/project1/data/tooth/: tooth.info.txt
Projects/project1/manual/: man.tex
Projects/project1/output/: error_image.tga  my_image_tricubic.tga  my_image_trilinear.tga
Projects/project1/output/set1/: set1-z_error.txt  set1-z_error_image.tga  set1-z_tricubic.tga  set1-z_trilinear.tga
Projects/project1/output/stent/: stent+y_error.txt  stent+y_error_image.tga  stent+y_tricubic.tga  stent+y_trilinear.tga
Projects/project1/output/toothx/: tooth-x_error_.txt  tooth-x_error_image.tga  tooth-x_tricubic.tga  tooth-x_trilinear.tga
Projects/project1/output/toothz/: tooth-z_error_.txt  tooth-z_error_image.tga  tooth-z_tricubic.tga  tooth-z_trilinear.tga
Projects/project1/src/: common.h  grid.h  image.h  interpolator.h  ray_casting.cpp  rc.h  tgaimage.h
Projects/project2/: CMakeLists.txt  run_test.cmd
Projects/project2/data/tooth/: link.txt
Projects/project2/report/: report.tex
Projects/project2/src/: KdTree.h  common.h  compare_images.h  grid.h  image.h  rc.h  renderer.h  scat_data.h  scat_interpol.cpp  tgaimage.cpp
Projects/project2/viz/: 1M_K10_R01_stent_S2_L_+y.tga  1M_K10_R01_tooth_S2_L_-z.tga  S2_L_+x.tga  error.txt  error.xlsx
Projects/project2/viz/kd_points/H_L_MQ/: 12_spheres_H_L_MQ.tga  15_spheres_H_L_MQ.tga  18_spheres_H_L_MQ.tga  21_spheres_H_L_MQ.tga  24_spheres_H_L_MQ.tga  27_spheres_H_L_MQ.tga  30_spheres_H_L_MQ.tga  33_spheres_H_L_MQ.tga  36_spheres_H_L_MQ.tga  39_spheres_H_L_MQ.tga  3_spheres_H_L_MQ.tga  6_spheres_H_L_MQ.tga  9_spheres_H_L_MQ.tga
Projects/project2/viz/kd_points/H_L_RE/: 12_spheres_H_L_RE.tga  15_spheres_H_L_RE.tga  18_spheres_H_L_RE.tga  21_spheres_H_L_RE.tga  24_spheres_H_L_RE.tga  27_spheres_H_L_RE.tga  30_spheres_H_L_RE.tga  33_spheres_H_L_RE.tga  36_spheres_H_L_RE.tga  39_spheres_H_L_RE.tga  3_spheres_H_L_RE.tga  6_spheres_H_L_RE.tga  9_spheres_H_L_RE.tga
Projects/project2/viz/kd_points/S2_L/: 12_spheres_S2_L.tga  15_spheres_S2_L.tga  18_spheres_S2_L.tga  21_spheres_S2_L.tga  24_spheres_S2_L.tga  27_spheres_S2_L.tga  30_spheres_S2_L.tga  33_spheres_S2_L.tga  36_spheres_S2_L.tga  39_spheres_S2_L.tga  3_spheres_S2_L.tga  6_spheres_S2_L.tga  9_spheres_S2_L.tga
Projects/project2/viz/num_points/H_G_MQ/: 10000_spheres_H_G_MQ.tga  1000_spheres_H_G_MQ.tga  100_spheres_H_G_MQ.tga
Projects/project2/viz/num_points/H_G_RE/: 10000_spheres_H_G_RE.tga  1000_spheres_H_G_RE.tga  100_spheres_H_G_RE.tga
Projects/project2/viz/num_points/H_L_MQ/: 10000000_spheres_H_L_MQ.tga  1000000_spheres_H_L_MQ.tga  100000_spheres_H_L_MQ.tga  1000_spheres_H_L_MQ.tga  100_spheres_H_L_MQ.tga
Projects/project2/viz/num_points/H_L_RE/: 10000000_spheres_H_L_RE.tga  1000000_spheres_H_L_RE.tga  100000_spheres_H_L_RE.tga  1000_spheres_H_L_RE.tga  100_spheres_H_L_RE.tga
Projects/project2/viz/num_points/S2_G/: 10000000_spheres_S2_G.tga  1000000_spheres_S2_G.tga  100000_spheres_S2_G.tga  10000_spheres_S2_G.tga  1000_spheres_S2_G.tga  100_spheres_S2_G.tga
Projects/project2/viz/num_points/S2_L/: 10000000_spheres_S2_L.tga  1000000_spheres_S2_L.tga  100000_spheres_S2_L.tga  10000_spheres_S2_L.tga  1000_spheres_S2_L.tga  100_spheres_S2_L.tga
Projects/project2/viz/r2/H_G_MQ/: .8_spheres_H_G_MQ.tga  0.01_spheres_H_G_MQ.tga  0.2_spheres_H_G_MQ.tga  0.3_spheres_H_G_MQ.tga  0.4_spheres_H_G_MQ.tga  0.5_spheres_H_G_MQ.tga  0.6_spheres_H_G_MQ.tga  0.7_spheres_H_G_MQ.tga  0.99_spheres_H_G_MQ.tga  0.9_spheres_H_G_MQ.tga
Projects/project2/viz/r2/H_G_RE/: .8_spheres_H_G_RE.tga  0.01_spheres_H_G_RE.tga  0.2_spheres_H_G_RE.tga  0.3_spheres_H_G_RE.tga  0.4_spheres_H_G_RE.tga  0.5_spheres_H_G_RE.tga  0.6_spheres_H_G_RE.tga  0.7_spheres_H_G_RE.tga  0.99_spheres_H_G_RE.tga  0.9_spheres_H_G_RE.tga
Projects/project2/viz/r2/H_L_MQ/: 0.1_spheres_H_L_MQ.tga  0.2_spheres_H_L_MQ.tga
Projects/project2/viz/r2/H_L_RE/: 0.99_spheres_H_L_RE.tga
Projects/project3/: CMakeLists.txt  del_voro_sketch.dwg
Projects/project3/report/: report.tex
Projects/project3/src/: KdTree.h  colormap.h  common.h  grid.h  interpolator.h  scat_data_2d.h  voro_multi_res.cpp  vorodel.h
Projects/project3/viz/: test.ps  voro.ps  voro_err.ps
